# amazon-textract-annotator

./: .gitignore  README.md  pyproject.toml
src/amazon_textract_annotator/: __init__.py  annotators.py  app.py  file_processor.py  geometry.py  textract_client.py
